# webrtc-streamer

./: .cirrus.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.yml  .npmignore  .snyk  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile-build  Dockerfile-prd  Dockerfile.arm64  Dockerfile.rpi  Dockerfile.windows  Makefile  PULL_REQUEST_TEMPLATE.md  PeerConnectionManager.cpp  PeerConnectionManager.h  Procfile  README.md  appveyor.yml  conductor.cc  conductor.h  config.json  deploy.yaml  docker-compose.yml  h265.mkv  index.html  joinjanusvideoroom.js  joinxmpproom.js  main.cc  main.cpp  manifest.yml  package.json  peer_connection_client.cc  peer_connection_client.h  prepublish.js  rtspvideocapturer.h  (+2 more)
.circleci/: config.yml  deploy.sh  setup-heroku.sh  ssh_config
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: anchore-syft.yml  ccpp-linux.yml  ccpp-windows.yml  ccpp.yml  cpp-cross-linux-arm.yml  cpp-cross-linux-arm64.yml  cpp-cross-linux-rpi.yml  cpp-cross-linux.yml  cpp-deploy.yml  cpp-docker.yml  cpp-linux.yml  cpp-macos.yml  cpp-windows.yml  deploy-docker.yml  devcontainer.yml  mirror.yml  npm-publish.yml  okteto.yml  trivy.yml
VisualStudio/: webrtc-streamer.sln  webrtc-streamer.vcxproj  webrtc-streamer.vcxproj.filters
cad/: camera.FCStd  camera.stl
docs/: IMPLEMENTATION_SUMMARY.md  aac-support.md  api.md  class-diagram.md
grafana/: grafana.ini
grafana/provisioning/dashboards/: monitoring.json
grafana/provisioning/datasources/: datasource.yml
html/: .babelrc  ajax.js  apprtc.html  apprtc.json  help.html  index.html  index.js  janus.html  janusvideoroom.html  janusvideoroom.js  janusvideoroom.json  nav.css  package-lock.json  package.json  rtsp2webrtc.html  sendrequest.js  sendstream.html  stanzaio.html  strophe.html  styles.css  webpack.config.js  webrtcstream.html  webrtcstreamer.html  webrtcstreamer.js  webrtcstreamer.json  xmpp.html
html/libs/: adapter.js  sdp-jingle-json.bundle.min.js  stanzaio.bundle.min.js  strophe.jinglejs.js  strophe.muc.min.js
inc/: AACDecoder.h  AudioDecoderFactory.h  CapturerFactory.h  EncodedVideoFrameBuffer.h  FileVideoCapturer.h  HttpServerRequestHandler.h  NullCodec.h  NullDecoder.h  NullEncoder.h  PeerConnectionManager.h  V4l2AlsaMap.h  V4l2Capturer.h  VNCVideoCapturer.h  VcmCapturer.h  VideoDecoder.h  VideoDecoderFactory.h  VideoEncoderFactory.h  VideoFilter.h  VideoScaler.h  VideoSource.h  decoder.h  desktopcapturer.h  fileaudiocapturer.h  filecapturer.h  filevideocapturer.h  getopt.h  liveaudiosource.h  livevideosource.h  rtmpvideosource.h  rtpvideocapturer.h  rtspaudiocapturer.h  rtspvideocapturer.h  scaler.h  screencapturer.h  url.h  windowcapturer.h  yuvvideocapturer.h
jsdoc/: JanusVideoRoom.html  WebRtcStreamer.html  index.html  janusvideoroom.js.html  webrtcstreamer.js.html
prometheus/: prometheus.yml
public/: .gitignore  Dockerfile  cypress.json  index.html  index.js  package-lock.json  package.json  webpack.config.js
public/cypress/integration/benchmark/: interaction.js
public/cypress/support/: index.js
snap/: snapcraft.yaml
src/: AACDecoder.cpp  HttpServerRequestHandler.cpp  PeerConnectionManager.cpp  VNCVideoCapture.cpp  desktopcapturer.cpp  fileaudiocapturer.cpp  filecapturer.cpp  filevideocapturer.cpp  getopt.cpp  main.cpp  rtpvideocapturer.cpp  rtspaudiocapturer.cpp  rtspvideocapturer.cpp  screencapturer.cpp
test/: README.md  build_and_test.sh  test_aac_decoder  test_aac_decoder.cpp
videos/: airshow.264  c.264
